--- a/.github/workflows/flake-test.yml
+++ b/.github/workflows/flake-test.yml
@@ -4,11 +4,14 @@ on:
   push:
     branches:
       - master
+  schedule:
+    - cron: "37 13 * * *"
+    - cron: "3 14 * * 1,5"
+  workflow_dispatch:
 
 jobs:
   flake-checker:
     name: Flake ❄️ Checker ✅
-    if: github.event.schedule == "37 13 * * *"
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
@@ -20,7 +23,6 @@ jobs:
 
   lock-updater:
     name: Flake ❄️ Lock 🔒️ Updater ✨
-    if: github.event.schedule == "3 14 * * 1,5"
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
