--- a/.github/workflows/flake-test.yml
+++ b/.github/workflows/flake-test.yml
@@ -18,7 +18,7 @@ jobs:
         with:
           fetch-depth: 0
       - uses: DeterminateSystems/nix-installer-action@v15
-      - uses: DeterminateSystems/flakehub-cache-action@v9
+      # - uses: DeterminateSystems/flakehub-cache-action@v9
       - uses: DeterminateSystems/flake-checker-action@v9
 
   lock-updater:
@@ -29,7 +29,7 @@ jobs:
         with:
           fetch-depth: 0
       - uses: DeterminateSystems/nix-installer-action@v15
-      - uses: DeterminateSystems/flakehub-cache-action@v9
+      # - uses: DeterminateSystems/flakehub-cache-action@v9
       - uses: DeterminateSystems/update-flake-lock@v24
         with:
           pr-title: "chore: update flake.lock"
