feat: added cachix
M  .github/workflows/flake-test.yml

--- a/.github/workflows/flake-test.yml
+++ b/.github/workflows/flake-test.yml
@@ -1,12 +1,8 @@
 name: Flake ❄️ Tests
 
 on:
-  push:
-    branches:
-      - master
   schedule:
-    - cron: "37 13 * * *"
-    - cron: "3 14 * * 1,5"
+    - cron: "0 0 * * 0"
   workflow_dispatch:
 
 jobs:
@@ -18,7 +14,10 @@ jobs:
         with:
           fetch-depth: 0
       - uses: DeterminateSystems/nix-installer-action@v15
-      # - uses: DeterminateSystems/flakehub-cache-action@v9
+      - uses: cachix/cachix-action@v14
+        with:
+          name: flake-templates
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - uses: DeterminateSystems/flake-checker-action@v9
 
   lock-updater:
@@ -29,7 +28,10 @@ jobs:
         with:
           fetch-depth: 0
       - uses: DeterminateSystems/nix-installer-action@v15
-      # - uses: DeterminateSystems/flakehub-cache-action@v9
+      - uses: cachix/cachix-action@v14
+        with:
+          name: flake-templates
+          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - uses: DeterminateSystems/update-flake-lock@v24
         with:
           pr-title: "chore: update flake.lock"
