--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -1,40 +1,38 @@
-name: Flake ❄️ Tests
+name: Flake ❄️
 
 on:
   schedule:
-    - cron: "0 0 * * 0"
+    - cron: "0 0 */14 * *"
   workflow_dispatch:
 
+env:
+  FLAKE_PATH: ./templates/flake-parts
+
 jobs:
-  flake-checker:
-    name: Flake ❄️ Checker ✅
-    runs-on: ubuntu-22.04
+  flake:
+    name: Flake ❄️ Lock 🔒️ Updater ✨
+    runs-on: ubuntu-24.04
+    strategy:
+      matrix:
+        flakes: ["empty", "java", "javascript", "python"]
     steps:
       - uses: actions/checkout@v5
         with:
           fetch-depth: 0
+
       - uses: DeterminateSystems/nix-installer-action@v20
       - uses: cachix/cachix-action@v16
         with:
           name: flake-templates
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - uses: DeterminateSystems/flake-checker-action@v12
+        with:
+          flake-lock-path: ${{ env.FLAKE_PATH }}/${{ matrix.flakes }}
 
-  lock-updater:
-    name: Flake ❄️ Lock 🔒️ Updater ✨
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v5
-        with:
-          fetch-depth: 0
-      - uses: DeterminateSystems/nix-installer-action@v20
-      - uses: cachix/cachix-action@v16
-        with:
-          name: flake-templates
-          authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
       - uses: DeterminateSystems/update-flake-lock@v27
         with:
           pr-title: "chore: update flake.lock"
+          path-to-flake-dir: ${{ env.FLAKE_PATH }}/${{ matrix.flakes }}
           pr-labels: |
             dependencies
             automated
