--- a/.github/workflows/flake.yml
+++ b/.github/workflows/flake.yml
@@ -24,14 +24,15 @@ jobs:
         with:
           name: flake-templates
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+
       - uses: DeterminateSystems/flake-checker-action@v12
         with:
-          flake-lock-path: ${{ env.FLAKE_PATH }}/${{ matrix.flakes }}
+          flake-lock-path: ${{ env.FLAKE_PATH }}/${{ matrix.flakes }}/flake.lock
 
       - uses: DeterminateSystems/update-flake-lock@v27
         with:
           pr-title: "chore: update flake.lock"
-          path-to-flake-dir: ${{ env.FLAKE_PATH }}/${{ matrix.flakes }}
+          path-to-flake-dir: ${{ env.FLAKE_PATH }}/${{ matrix.flakes }}/flake.lock
           pr-labels: |
             dependencies
             automated
